# voice_application

./: .gitignore  README.md
demo_sts/: .gitignore  CMakeLists.txt  CMakePresets.json  test.cpp
sts/: CMakeLists.txt  CMakePresets.json
sts/examples/: test.cpp
sts/include/: engine_manager.hpp
stt_lib/: .gitignore  CMakeLists.txt  CMakePresets.json  stt_lib.cpp  stt_lib.hpp
stt_lib/example/: CMakeLists.txt
stt_lib/models/: README.md
stt_lib/src/: whisper_stream.cpp
tts_lib/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  demo.cpp  tts_lib.cpp  tts_lib.hpp
tts_lib/example/: CMakeLists.txt  demo.cpp
tts_lib/models/: README.md
tts_lib/shared/include/: sdl_player.hpp
tts_lib/shared/src/: sdl_player.cpp
